@@ -1,3 +1,8 @@
+2017-02-14  Edward Jones  <ed.jones@embecosm.com>
+
+	* Driver.cpp (main): Refactor. Always provide -O3 on the
+	command line when both gathering and optimizing.
+
 2017-01-25  Edward Jones  <ed.jones@embecosm.com>
 
 	* Driver.cpp (main): Fix check of the command word to handle
